[tool.poetry]
name = "HELIOS"
version = "0.1.0"
description = "1D radiative transfer in (exo-)planet atmospheres"
authors = ["Matej Malik"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/exoclime/HELIOS"
include = ["helios/kernels.cu"]

[tool.poetry.dependencies]
astropy= ">=7.0.0"
h5py= ">=3.5.0"
matplotlib= ">=3.0.0"
numba= ">=0.64.0"
numpy= ">=1.24"
pycuda= "2026.1"
scipy= ">=1.0.0"
source= ">=1.0.0"
wget= ">=3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"